fix: it was impossible to click behind the empty space of widget button

--- a/src/components/Widget/style.scss
+++ b/src/components/Widget/style.scss
@@ -6,10 +6,9 @@
   display: flex;
   flex-direction: column;
   margin: 0 20px 20px 0;
-  max-width: 370px;
   position: fixed;
   right: 0;
-  width: 90vw;
+  width: auto;
   z-index: 9999;
   align-items: flex-end;
   justify-content: flex-end;
